--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ OWNER_USERNAME = imPanoti
 SQLALCHEMY_DATABASE_URI = postgres://kdatfrgz:lOrNoMJeZFRObgTtAIGr0N-BSAaGB0Mh@ziggy.db.elephantsql.com:5432/kdatfrgz
 MESSAGE_DUMP = -1001451724150
 GBAN_LOGS = -1001451724150
-SYS_ADMIN =
+SYS_ADMIN = 0
 LOAD =
 NO_LOAD = sed
 WEBHOOK = False
