--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-aiohttp>=2.2.5
-alphabet_detector
-beautifulsoup4
-bleach
-cachetools
-emoji
-feedparser
-future
-geopy
+aiohttp>=3.7.4.post0
+alphabet_detector>=0.0.7
+beautifulsoup4>=4.9.3
+bleach>=3.3.0
+cachetools>=4.42
+emoji>=1.2.0
+feedparser>=6.0.6
+future>=0.18.2
+geopy>=2.1.0
 git+https://github.com/python-telegram-bot/ptbcontrib.git
-gitpython
-google_trans_new
-markdown2
-multicolorcaptcha
-nltk
-pillow>=4.2.0
-psutil
-psycopg2-binary
-pyYAML>=5.1.2
-pyrate-limiter
-humanize
-pyrogram
-python-telegram-bot==13.5
-requests
-spongemock
+gitpython>=3.1.14
+google_trans_new>=1.1.9
+markdown2>=2.4.0
+multicolorcaptcha>=1.0.0
+nltk>=3.6.2
+pillow>=8.2.0
+psutil>=5.8.0
+psycopg2-binary>=2.9
+pyYAML>=5.4.1
+pyrate-limiter>=2.3.4
+humanize>=3.9.0
+pyrogram>=1.2.9
+python-telegram-bot>=13.6
+requests>=2.25.1
+spongemock>=0.3.4
 sqlalchemy==1.3.20
-telethon==1.16.4
-telegraph
-tgcrypto
-tswift
-ujson
-zalgo-text
+telethon==1.21.1
+telegraph>=1.4.1
+tgcrypto>=1.2.2
+tswift>=0.7.0
+ujson>=4.0.2
+zalgo-text>=0.6
