--- a/logging.ini
+++ b/logging.ini
@@ -9,10 +9,10 @@ handlers=screen,file
 keys=simple,verbose
 
 [formatter_simple]
-format=%(asctime)s [%(levelname)s] %(name)s: %(message)s
+format=[%(levelname)s] %(name)s: %(message)s
 
 [formatter_verbose]
-format=[%(asctime)s] %(levelname)s [%(filename)s %(name)s %(funcName)s (%(lineno)d)]: %(message)s
+format=%(levelname)s [%(filename)s %(name)s %(funcName)s (%(lineno)d)]: %(message)s
 
 [handlers]
 keys=file,screen
