--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,24 @@ alphabet_detector>=0.0.7
 beautifulsoup4>=4.9.3
 bleach>=3.3.0
 cachetools>=4.2.2
-emoji
-feedparser
-future
-geopy
+emoji>=1.2.0
+feedparser>=6.0.6
+future>=0.18.2
+geopy>=2.1.0
 git+https://github.com/python-telegram-bot/ptbcontrib.git
 gitpython>=3.1.14
 google_trans_new>=1.1.9
 humanize>=3.9.0
 markdown2>=2.4.0
 multicolorcaptcha>=1.0.0
-nltk
 pillow>=8.2.0
-psutil
+psutil>=5.8.0
 psycopg2-binary>=2.9
 pyYAML>=5.4.1
 pyrate-limiter>=2.3.4
 python-telegram-bot>=13.6
 requests>=2.25.1
-spongemock
+spongemock>=0.3.4
 sqlalchemy==1.3.20
 telethon==1.21.1
 telegraph>=1.4.1
