--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ future>=0.18.2
 geopy>=2.1.0
 git+https://github.com/python-telegram-bot/ptbcontrib.git
 gitpython>=3.1.14
-google_trans_new>=1.1.9
+gpytranslate>=1.2.0
 humanize>=3.9.0
 markdown2>=2.4.0
 multicolorcaptcha>=1.0.0
