--- a/logging.ini
+++ b/logging.ini
@@ -24,4 +24,4 @@ formatter=sampleFormatter
 args=(sys.stdout,)
 
 [formatter_sampleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format=%(name)s - %(levelname)s - %(message)s
