--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ emoji>=1.2.0
 feedparser>=6.0.6
 future>=0.18.2
 geopy>=2.1.0
-git+https://github.com/python-telegram-bot/ptbcontrib.git
 gitpython>=3.1.14
 gpytranslate>=1.2.0
 humanize>=3.9.0
@@ -22,7 +21,7 @@ python-telegram-bot>=13.6
 requests>=2.25.1
 spongemock>=0.3.4
 sqlalchemy==1.3.20
-telethon==1.21.1
+telethon>=1.23.0
 telegraph>=1.4.1
 tgcrypto>=1.2.2
 tswift>=0.7.0
