--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ future>=0.18.2
 geopy>=2.1.0
 gitpython>=3.1.14
 gpytranslate>=1.2.0
+google-play-scraper>=1.0.0
 humanize>=3.9.0
 markdown2>=2.4.0
 multicolorcaptcha>=1.0.0
