--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ geopy>=2.1.0
 gitpython>=3.1.14
 gpytranslate>=1.2.0
 google-play-scraper>=1.0.0
+heroku3>=4.2.3
 humanize>=3.9.0
 markdown2>=2.4.0
 multicolorcaptcha>=1.0.0
