--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ geopy>=2.1.0
 gitpython>=3.1.14
 gpytranslate>=1.2.0
 google-play-scraper>=1.0.0
-heroku3>=4.2.3
 humanize>=3.9.0
 markdown2>=2.4.0
 multicolorcaptcha>=1.0.0
@@ -20,10 +19,10 @@ psycopg2-binary>=2.9
 pyYAML>=5.4.1
 pyrate-limiter>=2.3.4
 python-telegram-bot>=13.6
+pyrogram>=1.2.9
 requests>=2.25.1
 spongemock>=0.3.4
 sqlalchemy==1.3.20
-telethon>=1.23.0
 telegraph>=1.4.1
 tgcrypto>=1.2.2
 tswift>=0.7.0
